--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <header>    
         <div id="myNavBar" class="navbar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="contact.html">Contact Me</a>
         </div>  
     </header>
