--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="date"> Jul 2020 – Aug 2020 </li>
                     <p> <b> <p></p> Aswan Internation Engineering </b></p>
                     <ul>    
-                        <li> Designed and created mobile applications such as a notfiication application used by the company's employees</li>
+                        <li> Designed and created mobile applications such as a notification application used by the company's employees</li>
                         <br> 
                         <li> Designed an email service and a simple database framework that uses the database-first approach </li>
                     </ul>
