Addded two new pages

--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <header>    
-        <div id="myNavBar" class="navbar">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="navbar">
             <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="links.html">Where To Find Me</a>
             <a href="contact.html">Contact Me</a>
         </div>  
     </header>
     <body >
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
             <div class="contactBody"> 
             <div class="contactForm">
                 <form method="POST" action="mailto:b00074249@aus.edu">
@@ -31,14 +31,5 @@
         <footer>
             <p> © Ramy Gendy </p>
         </footer>
-        <script>
-            function openNav() {
-              document.getElementById("myNavBar").style.width = "250px";
-            }
-            
-            function closeNav() {
-              document.getElementById("myNavBar").style.width = "0";
-            }
-        </script>
     </body>
 </html>
