--- a/links.html
+++ b/links.html
@@ -4,6 +4,7 @@
         <title>Home Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <header>    
@@ -15,6 +16,7 @@
         </div>  
     </header>
     <body>
+        <a href="#" class="fa fa-facebook"></a>
         <footer>
             <p> © Ramy Gendy </p>
         </footer>
