--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
             <div class="contactBody"> 
             <div class="contactForm">
                 <form method="POST" action="mailto:b00074249@aus.edu">
-                    <label for="fName"> First Name: </label>
+                    <label class="form-label" for="fName"> First Name: </label>
                     <input type="text" id="firstName" name="fName" placeholder="Your First Name" required> <br> <br>
-                    <label for="lName"> Last Name: </label>
+                    <label class="form-label" for="lName"> Last Name: </label>
                     <input type="text" id="lastName" name="lName" placeholder="Your Last Name" required> <br> <br>
-                    <label for="message"> Message:</label> <br>
+                    <label class="form-label" for="message"> Message:</label> <br>
                     <textarea id="message" name="message" rows="4" cols="50" placeholder="Enter Message" required></textarea> <br> <br>
                     <input type="submit" value="Send">
                 </form>      
