--- a/links.html
+++ b/links.html
@@ -16,7 +16,13 @@
         </div>  
     </header>
     <body>
-        <a href="#" class="fa fa-facebook"></a>
+        <h2 class="links-header"> Social Media Accounts: </h2>
+        <main> 
+        <a href="https://www.facebook.com/ramy.refaat.90/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/Reko14999" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/ramyrefaat184/?hl=en" class="fa fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/ramy-gendy-b935231a6/" class="fa fa-linkedin"></a>
+        </main>
         <footer>
             <p> © Ramy Gendy </p>
         </footer>
