Readjusting the pages

--- a/about.html
+++ b/about.html
@@ -10,11 +10,32 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
-            <a href="links.html">Where To Find Me</a>
+            <a href="experience.html">My Skills</a>
             <a href="contact.html">Contact Me</a>
         </div>  
     </header>
-    <body>
+    <body>   
+        <main>
+            <div class="Box"> 
+                <h2> Some Information About Me </h2>
+                <p> My name is Ramy Gendy, and I am currently a student in American University of Sharjah. 
+                    I am from Egypt and I have been living in the UAE for 16 years.
+                    Once I graduate, I plan on going for post-graduate studies in Europe.
+                </p>
+            </div>
+            <div class="Box">
+                <h2> Life Goals </h2>
+                <ul>
+                    <li> To have a stable income and job in the future  </li>
+                    <br>
+                    <li> To live in a good house in a Eruopean country </li>
+                    <br>
+                    <li> To always keep improving myself in my field and keep up to date </li>
+                    <br>
+                 </li>
+                </ul>
+            </div>
+        </main>
         <main>
             <div class="Box">
                 <h2> Hobbies </h2>
@@ -46,73 +67,13 @@
                     <br>
                 </ul>
             </div>
-            <div class="Box"> 
-                <h2> Work Experience </h2>
-                <ul>
-                    <li class="date"> Jul 2020 – Aug 2020 </li>
-                    <p> <b> <p></p> Aswan Internation Engineering </b></p>
-                    <ul>    
-                        <li> Designed and created mobile applications such as a notification application used by the company's employees</li>
-                        <br> 
-                        <li> Designed an email service and a simple database framework that uses the database-first approach </li>
-                    </ul>
-                </ul>
-            </div>
-        </main>
-        <main> 
-            <div class="Box"> 
-            <h2> Computer Skills </h2>
-                <ul>
-                    <li> C++ programming: Intermediate </li>
-                    <br>
-                    <li> Java programming: Intermediate </li>
-                    <br>
-                    <li> Python programming: Intermediate</li>
-                    <br>
-                    <li> Database Programming: Intermediate</li>
-                    <br>
-                    <li> Unix/Linux programming: Basic</li>
-                    <br>
-                    <li> Microsoft Excel: Basic</li>
-                    <br>
-                    <li> Microsoft Access: Basic</li>
-                    <br>
-                    <li> Matlab: Basic</li>
-                </ul>
-            </div> 
-            <div class="Box">
-                <div>
-                    <h2> Additional Skills </h2>
-                    <ul>
-                        <h4> Soft Skills</h4>
-                        <li> Not affected by pressure or stress</li>
-                        <br>
-                        <li> Strives to expand and explore fields within computer science</li>
-                        <br>
-                        <li> Deals with problems within a group effectively</li>
-                        <br>
-                        <li> Functions well in groups</li>
-                        <br>
-                        <li> Good presentation skills</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <h4> Languages</h4>
-                        <li> English: Fluent in Oral and Written </li>
-                        <br>
-                        <li> Arabic: Fluent in Oral and Good in Written </li>
-                        <br>
-                    </ul>
-                </div>
-            </div>
             <div class="Box">
                 <h2> Extracurricular Activities </h2>
                 <ul>
                     <li> Member of the Gaming Club, Egyptian Cultural Club, Astronomy Club, and Computer Engineering Club </li>
                 </ul>
             </div> 
-        </main>    
+        </main>
         <footer>
             <p> © Ramy Gendy </p>
         </footer>
