--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>Home Page</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -10,12 +11,12 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
-            <a href="links.html">Where To Find Me</a>
+            <a href="experience.html">Where To Find Me</a>
             <a href="contact.html">Contact Me</a>
         </div>  
     </header>
     <body >
-            <div class="contactBody"> 
+        <div class="contactBody"> 
             <div class="contactForm">
                 <form method="POST" action="mailto:b00074249@aus.edu">
                     <label class="form-label" for="fName"> First Name: </label>
@@ -28,6 +29,13 @@
                 </form>      
             </div>
         </div>
+        <h2 class="links-header"> Social Media Accounts: </h2>
+        <main> 
+        <a href="https://www.facebook.com/ramy.refaat.90/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/Reko14999" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/ramyrefaat184/?hl=en" class="fa fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/ramy-gendy-b935231a6/" class="fa fa-linkedin"></a>
+        </main>
         <footer>
             <p> © Ramy Gendy </p>
         </footer>
