--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
-            <a href="experience.html">Where To Find Me</a>
+            <a href="experience.html">My Skills</a>
             <a href="contact.html">Contact Me</a>
         </div>  
     </header>
