--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
         <a href="https://twitter.com/Reko14999" class="fa fa-twitter"></a>
         <a href="https://www.instagram.com/ramyrefaat184/?hl=en" class="fa fa-instagram"></a>
         <a href="https://www.linkedin.com/in/ramy-gendy-b935231a6/" class="fa fa-linkedin"></a>
+        <a href="https://github.com/Ramy-Gendy?tab=repositories" class="fa fa-github"></a>
         </main>
         <footer>
             <p> © Ramy Gendy </p>
