--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         </div>  
     </header>
     <body>
+        <div class="video">
+        <video width="100%" height="80%" controls>
+            <source src="RamyVideo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        </div>
         <footer>
             <p> © Ramy Gendy </p>
         </footer>
