--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
               <li class="fs-4">
                 Kotlin
               </li>
+              <li class="fs-4">
+                Flutter
+              </li>
             </ul>
           </div>
           <br>
