--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <h1 class="text-center"> About Me </h1>
       <br>
       <p class="fs-4">
-        My name is Ramy Gendy, and I am currently a Computer Science student in American University of Sharjah.
-        I am from Egypt and I have been living in the UAE for 16 years.
+        My name is Ramy Gendy, and I am a recent Computer Science graduate from American University of Sharjah.
+        I am from Egypt and I have been living in the UAE for 17 years.
         My hobbies are swimming, basketball, and video games.
         I code for fun in my free time and I tend to have a side project to relax from work.
         My plan for the future is to get a software development job somewhere in Europe and to settle down there.
@@ -121,7 +121,7 @@
           </p>
           <p class="fs-4">
             <strong> Duration: </strong>
-            August 2017 - Present
+            September 2017 - June 2021
           </p>
           <p class="fs-4">
             <strong> Degree: </strong>
