Updated CV and skills

--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
           </ul>
         </div>
       </div>
+      <div class="row mt-5 pt-5">
+        <div class="col-3 pt-5">
+          <img src="saluslab.svg" width="200px" height="200px">
+        </div>
+        <div class="col">
+          <p class="fs-4">
+            <strong> Company name: </strong>
+            Salus Lab
+          </p>
+          <p class="fs-4">
+            <strong> Position: </strong>
+            Intern
+          </p>
+          <p class="fs-4">
+            <strong> Duration: </strong>
+            13th June 2021 - 25th July 2021
+          </p>
+          <p class="fs-4">
+            <strong> Tasks and projects: </strong>
+          </p>
+          <ul>
+            <li class="fs-4">
+              A full-stack Web application that is responsible for Incident Management, using VueJS and Fastify.
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -262,7 +289,25 @@
               Express
             </li>
             <li class="fs-4">
+              Fastify
+            </li>
+            <li class="fs-4">
               MQTT
+            </li>
+          </ul>
+        </div>
+        <br>
+        <div class="col pt-3 mt-3">
+          <h3>
+            Web Frameworks
+          </h3>
+          <br>
+          <ul>
+            <li class="fs-4">
+              ReactJS
+            </li>
+            <li class="fs-4">
+              VueJS
             </li>
           </ul>
         </div>
