--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="nav-item nav-link active fs-4" href="#education">Education </a>
         <a class="nav-item nav-link active fs-4" href="#projects">Project</a>
         <a class="nav-item nav-link active fs-4" href="#skills">Skills</a>
-        <a class="nav-item nav-link active fs-4" href="Ramy Gendy CV.pdf" download> Resume </a>
+        <a class="nav-item nav-link active fs-4" href="Ramy Gendy Resume.pdf".pdf" download> Resume </a>
       </div>
     </div>
   </nav>
